Update color scheme with new primary and secondary colors

--- a/styles.css
+++ b/styles.css
@@ -97,7 +97,7 @@
   
   section h2 {
     margin-bottom: 15px;
-    color: var(--tertiary-color-2);
+    color: var(--secondary-color);
     font-size: 2em;
   }
   
