--- a/styles.css
+++ b/styles.css
@@ -315,12 +315,9 @@
     }
   
     .progress-circle circle {
-      r: 35;
-      cx: 40;
-      cy: 40;
-      stroke-dasharray: 220;
-      stroke-dashoffset: 0;
-    }
+        stroke-linecap: round;
+        transition: stroke-dashoffset 1s linear;
+      }
   
     /* Adjust Map iframe height */
     #location iframe {
@@ -371,12 +368,9 @@
     }
   
     .progress-circle circle {
-      r: 40;
-      cx: 45;
-      cy: 45;
-      stroke-dasharray: 283;
-      stroke-dashoffset: 0;
-    }
+        stroke-linecap: round;
+        transition: stroke-dashoffset 1s linear;
+      }
   
     /* Adjust Map iframe height */
     #location iframe {
@@ -427,12 +421,9 @@
     }
   
     .progress-circle circle {
-      r: 45;
-      cx: 50;
-      cy: 50;
-      stroke-dasharray: 283;
-      stroke-dashoffset: 0;
-    }
+        stroke-linecap: round;
+        transition: stroke-dashoffset 1s linear;
+      }
   
     /* Adjust Map iframe height */
     #location iframe {
