--- a/styles.css
+++ b/styles.css
@@ -10,84 +10,84 @@
   /* Font face rules */
   @font-face {
     font-family: 'Roboto';
-    src: url('/assets/fonts/roboto/Roboto-Regular.ttf') format('truetype');
+    src: url('https://mlounello.github.io/holiday-cocktail-invitiation/assets/fonts/roboto/Roboto-Regular.ttf') format('truetype');
     font-weight: 400;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Roboto';
-    src: url('/assets/fonts/roboto/Roboto-Bold.ttf') format('truetype');
+    src: url('https://mlounello.github.io/holiday-cocktail-invitiation/assets/fonts/roboto/Roboto-Bold.ttf') format('truetype');
     font-weight: 700;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Roboto';
-    src: url('/assets/fonts/roboto/Roboto-Italic.ttf') format('truetype');
+    src: url('https://mlounello.github.io/holiday-cocktail-invitiation/assets/fonts/roboto/Roboto-Italic.ttf') format('truetype');
     font-weight: 400;
     font-style: italic;
 }
 
 @font-face {
     font-family: 'Roboto';
-    src: url('/assets/fonts/roboto/Roboto-BoldItalic.ttf') format('truetype');
+    src: url('https://mlounello.github.io/holiday-cocktail-invitiation/assets/fonts/roboto/Roboto-BoldItalic.ttf') format('truetype');
     font-weight: 700;
     font-style: italic;
 }
 
 @font-face {
     font-family: 'Roboto';
-    src: url('/assets/fonts/roboto/Roboto-Light.ttf') format('truetype');
+    src: url('https://mlounello.github.io/holiday-cocktail-invitiation/assets/fonts/roboto/Roboto-Light.ttf') format('truetype');
     font-weight: 300;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Roboto';
-    src: url('/assets/fonts/roboto/Roboto-LightItalic.ttf') format('truetype');
+    src: url('https://mlounello.github.io/holiday-cocktail-invitiation/assets/fonts/roboto/Roboto-LightItalic.ttf') format('truetype');
     font-weight: 300;
     font-style: italic;
 }
 
 @font-face {
     font-family: 'Roboto';
-    src: url('/assets/fonts/roboto/Roboto-Thin.ttf') format('truetype');
+    src: url('https://mlounello.github.io/holiday-cocktail-invitiation/assets/fonts/roboto/Roboto-Thin.ttf') format('truetype');
     font-weight: 100;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Roboto';
-    src: url('/assets/fonts/roboto/Roboto-ThinItalic.ttf') format('truetype');
+    src: url('https://mlounello.github.io/holiday-cocktail-invitiation/assets/fonts/roboto/Roboto-ThinItalic.ttf') format('truetype');
     font-weight: 100;
     font-style: italic;
 }
 
 @font-face {
     font-family: 'Roboto';
-    src: url('/assets/fonts/roboto/Roboto-Medium.ttf') format('truetype');
+    src: url('https://mlounello.github.io/holiday-cocktail-invitiation/assets/fonts/roboto/Roboto-Medium.ttf') format('truetype');
     font-weight: 500;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Roboto';
-    src: url('/assets/fonts/roboto/Roboto-MediumItalic.ttf') format('truetype');
+    src: url('https://mlounello.github.io/holiday-cocktail-invitiation/assets/fonts/roboto/Roboto-MediumItalic.ttf') format('truetype');
     font-weight: 500;
     font-style: italic;
 }
 
 @font-face {
     font-family: 'Roboto';
-    src: url('/assets/fonts/roboto/Roboto-Black.ttf') format('truetype');
+    src: url('https://mlounello.github.io/holiday-cocktail-invitiation/assets/fonts/roboto/Roboto-Black.ttf') format('truetype');
     font-weight: 900;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Roboto';
-    src: url('/assets/fonts/roboto/Roboto-BlackItalic.ttf') format('truetype');
+    src: url('https://mlounello.github.io/holiday-cocktail-invitiation/assets/fonts/roboto/Roboto-BlackItalic.ttf') format('truetype');
     font-weight: 900;
     font-style: italic;
 }
